src/pages/home/style.css
.home-content-container {
  width: 100%;
  height: auto;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  background-color: #F4F4F9;
}

.navbar {
  width: 100vw;
  height: 72px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #FFF;
  padding: 24px 112px;
}

.logo-navbar {
  width: auto;
  height: 24px;
}

.navbar-calendar-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 230px;
}

.input-calendar {
  width: 156px;
  height: 48px;
  font-size: 16px;
  font-weight: bold;
  text-align: center;
  border-radius: 8px;
  border: 2px solid #06BEE1;
}

.navbar-user-container {
  width: 230px;
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar-user-avatar {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 48px;
  height: 48px;
  border-radius: 24px;
  background-color: #E4FDE1;
}

.finance-card-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 48px 112px;
}

.finance-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 280px;
  height: 140px;
  border-radius: 24px;
  background: #FFF;
}

.table-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 0 112px;
}

.table-content-container {
  width: 100%;
  height: 592px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 24px;
  border-radius: 24px;
  background: #FFF;
}

.table-content-header {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 24px;
}

table {
  width: 100%;
}

tr {
  height: 32px;
}

th {
  text-align: left;
  color: #7C7C7C
}

td {
  color: #7C7C7C;
}

th.right {
  text-align: right;
}

th.center {
  text-align: center;
}

td.right {
  text-align: right;
}

td.center {
  text-align: center;
}

.modal-background {
  width: 100%;
  height: 100vh;
  display: none;
  flex-direction: column;
  align-items: flex-end;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(1, 4, 0, 0.20);
}

.modal-content {
  height: 100%;
  width: 480px;
  padding: 24px;
  background-color: #F4F4F9;
}

.modal-content-header {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

